welcome.lessons.welcome.summative.Moria.scala.code
def trouverSortie () 
{
  droite()
  droite()
  while ((!estFaceMur()))
  {
    while(!estSurBiscuit()) 
    {
      if (estFaceMur()) 
      {
        break
      }
      avance()
    }
    if (estSurBiscuit()) 
    {
      prendBiscuit()
      while(!estSurBiscuit()) 
      {
        recule()
      }
      avance()
      poseBiscuit()
      avance()
    }
  }
  droite()
  avance()
  gauche()
  avance()
}
trouverSortie()